--- a/aDVanceERP.Modulos.CompraVenta/MVP/Vistas/Venta/VistaRegistroVenta.resx
+++ b/aDVanceERP.Modulos.CompraVenta/MVP/Vistas/Venta/VistaRegistroVenta.resx
@@ -123,127 +123,126 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="fieldTituloGestionArticulos.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAV1JREFUOE/l
-        k70rhVEcxx/FoESJgV0pGWSXyWCRxCqp4z7n/H6ne14upeQZRRaZbxYGy10YZGC02kj4HySZ8H2uQz03
-        93p5pptPfeuc38v3vDzPiZoDIURbkiStYZofx/IAenKsVkMoH8Ysdjsdz8P0ucRywjnRg/GlI3n7rVje
-        WCrMBKssSB45jjeNUkMYv0IOC4mGYnnttUyCRRav1SGOvfthyMy9aXxFiC7kpi3Fs6kc0WC1AWADZ782
-        tFpNZo+qdqoN4E+GjfiHhp7luSW5HqZZnFZlXPgejDph+IiPsW9ZbdSTJ7mFugdsZC5YZMFqhIJ7Y0y7
-        U2oM4wp0Wk+W5YnVsUVry7tDDVLKDhTeYeVjQzQcwvko6aUB/GsXME5fys+FqwoWX1Msij58vbW02LPa
-        xjMbrREj9wKjcjpfJuoPrfXxRONowltVUyH0ieXCCHJXnuKFEGoKougN1uEhmbsJgcAAAAAASUVORK5C
-        YII=
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAVJJREFUOE/l
+        k7ErhVEYxj/FoESJgV0pGWSXyWCRxCqpzz3v+z6n+533XErJN4osMt/uwmCxMMjAaLWR8D9IMqHv4w73
+        6F7cifzqGc77nPOrM7xR9CeI47gtTdPWcN40CtpX0JOCV8OuKZJksVutmVfQcwk0oRr3KOhShW6/DOjG
+        SWEmdOYo6EhhNhPmIQW9KkjVmrhhQNfeUhq6crzlAwXvVoUAerP5Shx3ecvTTsxsFhUZrL5RmLMfC53l
+        ydqv8k71TVPCRvxDoQedO6H1cJ6jlssqXAHQqaBHZ3nPgTfqxQttKejBW54LXTkeJAq6T5KkXZnHFHSo
+        oNN6caATZ42LoqgldOUQUYeC7rzQcSIyHPZNUbJLAyp08bEp349wJXTVUCzGfd7SWnbZg7fVmtEgUNCL
+        Cpez87JIf+j4hBcZf99Vngo7h8KIgq68mIWw+928AdbhIZmN/QUCAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="fieldIcono.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAg9JREFUOE/F
-        VD1oVEEQPrkQfxD8QQTj4/JudnbfbpZIQAikEE6wUdTKH2wsBREVS2NhbRFiJRyClVhokyp1rILYKAhi
-        4R92xsJf/Imi3+yb07tw550I+sGwb+fNfPvNzptX+acgog3Omb0F8+EVdsh7GtewwTCR5xu9NU9hS7DH
-        nUZPsC4X1pzR8P7wzAeQ9CbGOKyuDnjH5z2bu7rtDykNhC/TszG7kfxI1d0SX3B8CvsH8jwQ2glDGN3m
-        nTmRzNL+5Psbwm74Y0LpLtS8dy73zjlaaZ5pBoSLGt4fWZatDZbvIOl7D/uMKo5o+MCohnp9tJvC8Vpt
-        E9YtIG7CFoMzRzXnF1I3Ld1GwBK6+gzrgrd8TZOaqUzmKYkdc/Vd8L2A3S8sz2L9KIOQiAQF00k4lws2
-        V4OjfVIOvrVpIcLpN5Oxmcf+U7DmksTiSq7keb4G747LPsZsc0mWlJmv3WRLUFupk4j7Fix90NhVmJYL
-        QlZYOqsJcVhGCadeTo42MPNq6TQSfjYDBG8j85gow3Vch+8dqjmoKaUCnDbXUX8boGp7S6E0CK5qJKqB
-        7J5MTyCyZeRvANXrhcAYsxXbauktIU2BqucyxzJB6u6N1k+hVaLaKyh6mFRZ8wXW3Dkysk5TekN/Wa/x
-        eVyUUouivgMd34N7PAb/6cB8Llo7oeH9gSZkSLzRaDSG1PW/Uan8AJQ+qCtGHasuAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAflJREFUOE/F
+        VEuoTlEUvqLrkfJIyvX33/Pvb33rrH13V7eUMlC/MiGMPDIxVBIyxMDYQIzUTRnJgImRMSPJhFIy8MoM
+        A8+8o3XuuZy7739Iiq9WnbPX+r6+1dprDw39S4QQlqhicymyM4sdZmE8r/8lJopiqRGPjHhuxIOZER4a
+        8bkkDuW8VpjINiNepZSG85zDVI6a4FZ+3gpvzYhn1Tew0QT3a3eX/SyqHDDibs5rRVMwxtFVpthXBcPW
+        6uxvBAfhjwV9usbwVrUwVQ15mIRTRtzIea3odDoLI+WmEd9a4mMpsivn/Q5zY683mrvzGO92l6nqCiMm
+        3WlU7M7JU9NkuF7dPcFjI64Z5XxNmqzaFFnvtWPa22DEUyPulJTTRrz3RfgpJmF/dVkF56KGLd6OqRxz
+        oai4VIXgqhEfInHSayPlbFEUC6Jir/+n1FnecIYvg2x7UaPVdUZ8jQzv6to5JXF8amvC4ZqQhn2VInEm
+        FxOR+T7p5jBK4nUSGXNnRrlgxJtSZPsPkjuIiisz+m9AVVdPO/QB+aBSCF2j3PbtiSEw58xCSmmxCwBY
+        6QLNnA/FiCe+x75BzdxATD8K2Z17YZR7lSvikw9q7cjIopw7C/WT9dIknPBWy7K3JmrYZAx7jDgYRY4k
+        ciLntUJEOkZc7Pf78/Lcf8N3lD6oK2xvYPkAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="btnCerrar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAKBJREFUOE/t
-        lEEKgzAQRQNV2pvpuWwXvUbd6lqPp/8JA0HMYKwr8cEDE8dPksGEm1p+ZbmMfKihtlpGCT5ykp30QnnX
-        S2rfTKR4yFZSOMiXXMPcKKn5Sb5x8UKzw4yt0MNhRnxOnGn8XMhDxKF/h0G8TUw1ahenbplVsBoCaA4N
-        WDfqKXexFWZkh3phRlbo6b8el0MjvTCDGmrdy+HyhDAD6CA464NzjSkAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAJ1JREFUOE/l
+        lEEKwjAQRR+0RW9Wz1Vd9Bq6tWs9nvJhBoYhpka761uFzs8jmaGB3XMCZmDIhQLKKDvmQuQCvID7ilS1
+        xbLnXIx0wM2CD+CYA/btaZmr7alSkzbLnJL0Z5kT+6SexnWfw98SpX/LRLxmqadNbHplnUKnkUDD0QDy
+        oA550ydKMqdZWpM5TdLNfz09DtOKzFFG2erjsAPe6CA46xMjhLcAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="resource.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAEpJREFUOE9j
-        GDagCoqpBuZDMdXAqIGUA7IMrAPiVTjwfSjGJgfCIL0YAJTOZuLAN6EYmxwIVwIxSWBwhCE+MGog5YDq
-        xddAAQYGABGWJVQTyw17AAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAE1JREFUOE9j
+        YBguoAqKqQbmQzHVwKiBlAOyDKxjYGBYhQPfh2J0cRgG6cUAoHQ2Ewe+CcXo4jBciW4YIUCWl/GBUQMp
+        B1Q3kOrF18ABABGWJVTyBsYfAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="fieldCantidad.IconRight" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAAwAAAAMCAYAAABWdVznAAAABGdBTUEAALGPC/xhBQAAAGRJREFUKFNj
-        oC/QUFX+r66mNAfKZdBUVZkLEoNyMcEw0fARiJdBuQyaasqrQGJQLibQUFVaDVTwWUNNOU1dRSkTyP4G
-        0gSVxgTaCgoSGqoqa4AKP4GwuoryCg0NDWGoNF0AAwMALI4qfuAtfTwAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAAAwAAAAMCAYAAABWdVznAAAABGdBTUEAALGPC/xhBQAAAGdJREFUKFNj
+        YKAr0FBV/q+upjQHxtdUVZkLEkNVhQSGiYaPGqrKy2B8TTXlVSAxVFVIQENVabWGqvJnDTXlNHUVpUwN
+        VeVvIE3o6uBAW0FBQkNVZY2GqvInEFZXUV6hoaEhjK6OtgAALI4qfmoQVTsAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="fieldNombreArticulo.IconLeft" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAUFJREFUOE/t
-        VLFKBDEQXWxEe2vByo+wEWwsxEIsBEuxURS08LDxO+zFj7BUWJBMFkyyS7LhKkFBvEoEC2F9ezvxdlk5
-        9Q4OCx88ksnLvE3YzEQThU+SudyIDatos2SuxApLo8Fque00dZ2RLxgfwdR7P83y6HCKDEz3OPwZsiyZ
-        zzVd4BRZ/1SBSqwGQ4yXdc1qEWPtqCiKKbapcB/HM9jgwSsY7OdK7g4oFoKhN3KtrjktT5HTg95hqwrW
-        0DKEtweiWV5qIBhy2IDVdIjclMMK5R/E4hOHLQw1/Cr337CFP2A4xrNBMRwgt/lsPh+2oWskd/DVk0DE
-        i8EQjWKroWl5hrxeOWerAULpgdQgOkwwdEac1zWY3YDHrdL7DsOu/Ctw+3rOtXjHiV4x747VvvoNtrzy
-        3e2OV2LdpbTE0qQQRR/rh69Gj596ogAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAUNJREFUOE/t
+        lLFKBDEQhg8b0d5asPIhbIRrLMRCrhAsxUZR0EKx8TmuFx/CUmFB8mfBmdyyk2AlKIhWIlgIKzku52Zv
+        WVkOrfxgIMxMfjJhZjqdv8Sl6YI1ajMn9LxZUt1qTity1tvCuBej34TxJIyBc262mtcaIRgxeq/qbyTL
+        0kXLuBBGNnxVMFJrQVAIl+VYzioRwlFRFDOR2EOSzAnDCeNKSO1b0rvfppaCoDN6vRwT1mfCeBXCaSSY
+        G6wK4+MRmI8CI5pKzhmH/m9jJ6EnjOfIWaJRsO5urbPEv2BE7d1aZ4n2glO0jWUcTLTNuLENrn2T5oST
+        YEJYDoLWqK0oxvrcN7Y/R4KeMHqWgchIdcejZ1S/HBPGjTCOJ0bvJ5pKbsVofb1YVp+W8e4XwlTra7hg
+        fcl3tzuO1IYMsFLN+XW+AOuHr0ZSIaRYAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="resource.Image1" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAX1JREFUOE/V
-        1DsoRmEcx/EjDAaLUgYhBkkMEiVlcNsYZLeYKMrAYJBSFiUlmRkMIikppVyKlMFAURiUewblfv3+3vf8
-        6/U4R2LhV59O53/O87zP7bzev0sisn1ZKvwm8djFW4wp/DipUCe10AhbcA7LFq5whlZ0Ih+hsQ7tpUbE
-        dliKKqzhAXpXPxqadrziDjfQaPbgphvqbB4pKoTlGIuYwzLUSCNyUwc9e8GXU9b0NE2lBGq0hBFkwFIA
-        PdvBoAphOcUEZrAJNTIbsKRDtSHsqxCWLlzjEbd48q9qvAJLHlSr8a/azMBU4B45kbto3J1XmnABbYie
-        VSMw2uUjJEfuotFh19pOox8D0O73IA7bUKdjSMCHaOF1TPS1FKrgpwiTWIBOQAfUmZKESlyiVwU3DdCh
-        1ZHQBtUjF/Z9m2Ks4hkaoejr+ZRRjKMMOovaGGvgOkQ5+nCAwLThBM1Yh9YuE+4INT0dM3tPSxIY/X0N
-        Q2s5izQE5bvv/bl43jtBHGyF4DoheQAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAYpJREFUOE/V
+        1E2IzlEUx/GPsLCwUcpCiIWksdBESVlg7FjIfjZWM0VZjMUspJSNkpKsWViIpCallJciZTELahQWysuQ
+        hfL+2tH567jPI2bHt27/Oud3z3Pv+Z378L8xF8tzLWuTM2U2pvCtrHOtaCYszCLb8oQjmC75SbzCc4xi
+        DKtLvoeuYCfa1RRcjy24iQ+pjR/9LXvxFe/wJk9zvxVhPItdwoI2WXmCK5jAtdwUJ2rZnrkvf7pyXC+u
+        GazLTVdxAkuKbiBz93C0xHt4hjO4gDuN27eLbnHGjuFBifewH6/xEW/xKb+x+XrRrcrYUH7DzL5swnus
+        KLHW+WAYL9KQyG0tuV8Ilx9jfonFsEdvz+MwjqT7BzALd7PoKcwp+34QjY8xideypsTX4iwu5wTsy2LB
+        PGzGSxwse36yM4c2RiIM2oGV5X13axA38LkYF6+nh5M4jQ05i2FMdbuuR9iIQ3jYFurYg6fYjVvZu6V9
+        ThjXizHrdNGSvsTf1/Hs5UUsagXJ3+r+Qb4DQRxshbOREkwAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="resource.Image2" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAVxJREFUOE/d
-        08srhUEcxvE3d7kvCEuRhY3LykYWimywkP+BkoUS5bZ2KSsbW7JRdrJBks7uYONSlJRCYUEot+8zr5f3
-        nDm952DFU596f7OYd2Z+M86fTwnWcYfrOM5QiMD04QH3aIqjEUkIzBiO0Wqqr2RjGpsYQDISiibUlqMz
-        j30M4QqDCEwVxnGBc1RgAblIwSNaoPRjx/20o6XP4RVhrCGE+o9aTUrHMxqgdOPA/bQzikvUmCpyy1mo
-        RipWsIUOnGACVirxhC5TudGEG+jBDd6wi3JoXN1fhJpkZRX6sz+z0B28RS9KoZ/qB3VRtKDPtEEHrcP3
-        MowX7KFYA2QSWmUsOtciOGk4wpQKX5rhHbwu7Ay02nYUxJAHk3wsIcdUdjKxDF2hWg38Jrp36vIpIs7o
-        J9E2tqGnV6aBRKPz0Vvt9FFHNZEaosv8ragzh9AEHr2OEWTgX8Vx3gE8n1g0InveDQAAAABJRU5ErkJg
-        gg==
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAW9JREFUOE/V
+        079L1lEUx/EXlmZoWUORjmI0uFROLeIgFC3WIP0PCdEgRII/mvsBTi2uRYvgFi4lIeKmtaRBQQSBCelg
+        qKAWB+7z7evNerDtecMZ7rnnfu6555xLrdOK19jA9yr2BWdygZy72MQP9FaxHtTlAjlj+Ijrmb8ZT/AG
+        93Ak2/8rIRhPznmG9xjCKu7nATmdeIAVfMV5PMdJHMUWrqXYQSxm5wsi9QnsYQGvMI8raR1NOoYddKcz
+        t7GU6RSM4hsupXX5yU24iHq8xCxu4hMeljQKLmAbt0q+EJzBANbwE2/RkfzR/RepSX8wnW4u8zTN4Dru
+        oC1dGhd0ZRYJFfSlQkfxKwxjF+9wLvkepSwPsqjr2QhqwAc8LokFV0uFj4EdT9newOkDrKVy8BQmceK3
+        1j6OYyqN0OV887DE3EWXP+c1+h/iGXPp67Xnm/8i6hN/tb9k0dEQiobEMB+K6MxyEqhY/I4RNObBtc8v
+        PJ9YNMiiJ6kAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="fieldTituloTotalVenta.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAgRJREFUOE/F
-        VD1rFFEUnfUDjWIh2sRaYmctgl9RA4Go1VZpgsWQ93FnMzNvF+1GY2GhJo3aaGPjn7CRdP4HsVNQCCbE
-        +LWo58zcXWbBSQyCHri8d8+9c7jvvvsm+m/I8/hoV+xU5k27bsHPTxZzc/s17c8QxFzKxa7CPubevh4x
-        sWuwVyKyT9O3hopt5ol9GMfxXqWHuGHM4TLu3GWlmhHEXsnFfQ3e3lGqROiYkzjuVWxbpS/2PY/PfSOa
-        xHg0VLQO+xkSd43ctoIDsVzMolJDFEWxiz2DrbFSclsKZs7NlJUl9rZSUZqmYxDaoy7Rql9Co2Dw/nwm
-        9lMQd58+qriXiXuB9RvsC/humVhDu93ejdhG7s20UhVSMefKAEToa+I7JPZDx3rsZ2Hfu2LOlB8oMjFL
-        4D/wtpWKopvOHSE5qIxA4ilwffTxGda35DB3L+tVMh+xDYzMWaUqsFwG2HClkFzNXxHHB9DXCXI974/1
-        etcPcY+5fMBv2Cb6I0itPY5gvz6cIYSD4N7AVrLEOKWJFo9Z9vp3YgPgZm9VSfOTSkULC/E4KnmMEzxX
-        qgV/mXlZYi8o1wyKcmT0FYyA7YDIE1S8jvW00tuD81fNYfUKCB3mpzsWG0Ab/pkvhj8EXNAj+JtZ4i5q
-        yo6Bxru7EPlBYdjq34gN0euYE2w+f65K/WtE0S/Lyhb5pQNhcQAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAftJREFUOE/F
+        VLuKFUEQnfGBLwxEE40XzYxF8LU+QNDd6EYmi8GwXdWn705X34tmo2tgsD4SNdHEZH/CRMz8BzFTUBAV
+        3y4q1Xdmt+/szqIIeqCDPnXqUF1d3Vn2vyBS7BmAznhreukKdnaympnZ2taviwBzSkBvBPRWLD0bW6B3
+        AnoKYEs7b03UZp/E0Z2iKDa345eM2RXjzKfbsVUIoPMC/hosXRvj++agt2Yqy7K81r3S46eaVegy06MJ
+        6L2AfgbH07V2fcPGTGDm27GqqjZoz7R3Wmmt7zb0zOdiZY6uNlxZltuqqtqUyPL0EjoNg7XHPehjAN/Q
+        vYAWPPiRgL4J6EsAD9o5vV5vo4A+iDVnxwIlzLEYAC0kwpdizVLokxXQBQF9H8AcSfM8zC0BvdbbXiYv
+        M+9WsqmsFh4S0JLAPBTQC+XE0uO0StXHIpiPNlyElqsBbfiKeDR/VVFs98z7lRtau284vLgz5ji6qTna
+        ptQroiSaiNUkwxlC2CGg5wJ64p3hRJ7rMWOv1zJrIOArI9HsZMPNzRV7xdE9sWaxpnJxdFt13tGJlewO
+        qKmOTP0KxqDt8I7u61B7R4fb8U7o/I3mcPQKFPUwP/hjswZ1wz/ri9EPIcDc1Qvyjk+2tb+L3IOvC+iH
+        GuvX9Tdmyxj2zQFtvn6u7dg/wy/Lyhb5rCCxuAAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="fieldTituloNombreCliente.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAkhJREFUOE+9
-        VD1oFEEUPlH8a1S0sYgIgmCVRhFEEPwpggqKXGcRLNabnzc3OzPhohCzhFQqImgnCFYKikUECwstrBRt
-        bARBUVfCaSWKAe+M+r11zB3sXQ4U8sFj33zvzZs338xsZUlBRKsCiYNB1/Y7pbZnWXVlDP0bPKmznmQL
-        9gX2y5H8hu+Mr8u9MWUwstHR1U7LCUyc5SKBpGbe+2QT/KNei5vgWyh+JU3TNcWkfrDWrkdXTzCh6bWU
-        jk4Ph7o+ydvunuyM3ONIvfMkHi0qQzDiDoq9sjbZzGN0U8O4DZuHzcFuhbrazTEn5RAW/eCNvMzjEjgR
-        E36mWu/806l8Cmujk1M8drp2AlLcBfeDi2RZtgILjmBH362tbY1lOmBNkPiAfd4Ga2et3FEEu5CS2IfY
-        JxS+zWN8X2ChySLYDQSeQasGa9WoJ1si3ROOaBj5LVylI0HLadYyhjpAQg5Nxnk1+I8j3RfeqOuseTBy
-        CvlvIt1BIGVRjK9DEyueY84bcQ/++SIBQDcXMHmGfWeEQv5njOf/Xq0SUGAWXeZZkqzlMRYxEP5YEQSC
-        UceRQ+yzNIi9R05eBHsB3VzDwTTxEnZFqi/GiLahu7djJG9Eqgx+JfEu5tVqdXmkewLSPEfew0aSrItU
-        b4wLsQGJczjxw5EqgWPIaQ+6DQvAZb0KLV/z+43UAooXQvIjH1CkBoO3Ht/0S6/UIVDL+LLzAYHLYfcH
-        SVICa4MDuoTJ/Pv6yk8s+hf/6794RqmNzqgD/MdhP9JLhUrlN2mGHJmZ2i5PAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAjdJREFUOE+9
+        lE+ojFEYxj+RfxvExoKUUlZ3Q0pK+bMQijQ7i5vFZ85zznPmm/Oe21wKX7e7QlLslLKiyIKysGBhRWxs
+        lCKMbsNKRPmvd+7MNHNu904W/Fbvmec97zfnPc97sux/QnJRpNkVXXVHsHZDWVYWpjl/hdAeF+KbEB+F
+        +B2Iz0Lckhq2pbmzUo6OLg4OJ4SY0iKRcPq7SL4qEvvFmav6kUBcqNfrS9L9AxRFsVxoHwrREgcEHh2J
+        NXdYj92/OXhsDbSvheb+nG2I3twQ4nlR5Kt1Lc5UhfguxE8hvghxLdbsFtUCsEYc3orH+bROG00U4lfd
+        uU3T/xSPtFigPaLr4KqHgsNNIX5okbIsF4gze4T2a1FU16X1Mu2JeNzVWI+hvSsKbEzz6jTbI/FeiOu6
+        FuJpcDiV5qnwONI0tFeNWr421fsJ5Ej7YqzdFx0mtZdpjhZsisO4fk2IB6meIt5e1p5HjwkhXqZ6FmmL
+        4Np2aAnNyelN5rbQnO7lOJxRH2ocvLHB4YNeWNdaMxBvpsShWeb5Ul1HWi/OHOjq0duD4g011taIM28i
+        bbO/xgBCc0k8WlLD5lRLGSPXC/FqjLiSaj10SjpebFYqlfmp3k8gnghxr5Hny1JtgHFjVqiJI83eVOui
+        mnp0mBt6CO1FcXih85tq7Qkh3ukFpdqs6NE7M/1MrN2dZdk8NbteUNtexJ1hLZmB9kY8znWer086Yp34
+        7JwPwjCOWbsyeLtTXxyNU/2f8wdphhyZxXuzTQAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="fieldTituloNombreAlmacen.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAaRJREFUOE/V
-        U7tKA1EQXdDGNpWooPgjClprtf5AUHNfa+7uTQSrbRX/If6EhY02PkBLGyOIiBDFJiCKCko8c+/gKgaJ
-        jY8Dh8ycOTN79+4k+v9ItZjJjDwEj12iZln+PvI8788SuYpBz+FXrCF+oTiO4z629YZMqVFn5BEGXFkj
-        JliOKIZ2nRqxW9d6iOWv4YyYxrAbNO5bWxlm+Q11Y0ZQOyBPmqgplrsDdzSXGfWEhoa1doDlT6BaptUG
-        eXHHMcsfUa1WxlIj79NEOpY8rC2XrBXjgeUSyx7OqBoefkdXxFIBDFtE8YRTj0zLJWgPYCcQJ0pEymUP
-        6M0sEQucFnCJzPEldzj1gPkSQ/GG4YQ4URVai8se1EO9nBboNtBf/Ls7opg0Tj1+ZyCa5v3rGvmIRb7F
-        erSJFJOWGnXhtCyTt6eBaGpjH5fDTvq93AoMOT7OCnmCt7eBHaf1pC8AyBtETiOqkYfinxtICw3TKe0U
-        mcF1H3vKvUDOqUaeEDdpX3lMAfqz46I3UTzDU1swnvs4kPaRGHKqkSfE2zUpB3nMn0cUvQKkPzJYSZgi
-        kAAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAZ1JREFUOE/V
+        U71KXEEYXUgaW6uQCAl5EYVYa7W+wBLjnJkz7sw3KlhtG8k7xJewsIlNEiEp00RBRAQVG0ESoqCsfDO7
+        MntJgjb5OXDYM+ec+3Hv8G2r9d8jOjMjxCchviRvZ5v5ndHr9R6Kx2shrsqvWRPiWnW73X7Q7P8WYu3T
+        RHwW4jjQTA591UKcRJr3y849Hn3qF0g004k4FeJjCAtPmvkyOSHEtnaity+a+QiSt3NCeynE2xDCWDMf
+        QjNxdl270Zl2M8/odheeReJ79Ei1H0JnPATzvLAzXmeJdkmIb3pFtZ8RiVdCfK09cVgU4ocQ/UJ7Gb2J
+        Ix1iR7yZr72M5NETmq3aE+JQHMLwDRNtV4ij0Y7Z0mdrL+NnA/PFV3ekWr2683cGJuJl/lziQjzOo7dn
+        StXqRdqD5NC580AhzhLNStnJvJebheUstKvauc/AfnJuapjpXipvu85Naadkf2qgLrQQu7pTg717k3Um
+        PhQOzpppp+gd3dfmvJb+2ZPDhjjsCc2REPtZF+o+KstZM+0U/W4JeNSc9+/iBqQ/MlhWrBRuAAAAAElF
+        TkSuQmCC
 </value>
   </data>
 </root>
