--- a/aDVancePOS.Modulos.TerminalVenta/MVP/Vistas/Venta/VistaModificadorCantidadArticulo.resx
+++ b/aDVancePOS.Modulos.TerminalVenta/MVP/Vistas/Venta/VistaModificadorCantidadArticulo.resx
@@ -121,12 +121,41 @@
     <value>17, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnCerrar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnIntro.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAKBJREFUOE/t
-        lEEKgzAQRQNV2pvpuWwXvUbd6lqPp/8JA0HMYKwr8cEDE8dPksGEm1p+ZbmMfKihtlpGCT5ykp30QnnX
-        S2rfTKR4yFZSOMiXXMPcKKn5Sb5x8UKzw4yt0MNhRnxOnGn8XMhDxKF/h0G8TUw1ahenbplVsBoCaA4N
-        WDfqKXexFWZkh3phRlbo6b8el0MjvTCDGmrdy+HyhDAD6CA464NzjSkAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAN5JREFUSEvt
+        lTsKQjEQRY8bcBUWbkpchq2loIWfQiz84DYs7dyBjZWFYCEiCoI/LkwRo+89QyxzYJo7mbkk72UCiUDK
+        wATYA8/AUM3YemQyB85AG2gERge4AFO/qcsR6PpiAD3g4Isu2mrTFwNQrXpkkgySwRs14AFcgaFpfzWo
+        2AVbAHfTogxKdsPXnu42jTIYWH4FtJxYAjdbE2Wwtbwf+g4jWxNlUAV2wMZPOBQaaNhpYGUhk7ovOvSL
+        hp3GtX47bdk9519CNarNHdd6LGbA6ctZF4Vq9FjlPjiJD1602HSeFyOM9wAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="btnEliminar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAASVJREFUSEvt
+        lLtKQ0EQhr9oBH1HrYyNWAYstPAKRtGk94KgnQ+gIFinSaWFprLWB7Dwyg+zMEzcPRGMWOSDgeWfmZ2z
+        e2YHxvx3asACcAu8AJ8FewUegCXLq2QCOLbkG2ANWC7YCnBt8Ytxs0gdOLfg1eisQEXuo+iZAi6AD6AZ
+        nUOwDrxHMTEDXFnAfPD1gVbQxK7dfUJXqZMPMA1c2uaN6AQ6lrjvNK2ltZ2WLaDgN2AuOhxblnwIHNla
+        midb4Bk4ieI3bLvWjJuLbIEn4DSKAbVu+vJ0EmmebIGDiivy72ID2LS1Cvoi2QIj/8liEjizgPjA7gpt
+        qlGSKBYQv/HQlFtkpKMi4X9qF9gDdips6GGX0NidBXrWYak9c/b4k3E95m/4AvX2b5mxubBGAAAAAElF
+        TkSuQmCC
+</value>
+  </data>
+  <data name="btnEscape.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAORJREFUSEvt
+        1T1KBEEQxfHfCRS9h6kGXmQRc72BqWAiaKAGgoEfCG4omJsJXsLMTFQWEQUTlYIKhpbdpTQxmD8UTBe8
+        fnTBvKKnyAxO8IivYoXmOO8YyznesIONYu3iHaftpV1esNc2C+xj1Da7xFM322aB0MYdY+kNeoOp/C+D
+        hzwPcJh/+BCzuME9lhp9yeATW5jDXUbAKtZwhWUsNPqyQWTMPFawjWes4xKLfzV46ozoOr8vckS3OcLy
+        iCLsIrB+y8G0sIu4/sBRjqRSoQntxLiOZXGG13xqpUITy2riwun5wTf6XHOJVMnUSQAAAABJRU5ErkJg
+        gg==
+</value>
+  </data>
+  <data name="btnSimboloMenos.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAADZJREFUSEvt
+        zaENACAQBMEtDLpGgUdRFHlNXpC3O8naO5CkLw3YwCkWG7H16MAEVrGRHUhS4gIN2xxcfJQvTQAAAABJ
+        RU5ErkJggg==
 </value>
   </data>
 </root>
