--- a/aDVancePOS.Modulos.TerminalVenta/MVP/Vistas/Venta/VistaModificadorCantidadArticulo.resx
+++ b/aDVancePOS.Modulos.TerminalVenta/MVP/Vistas/Venta/VistaModificadorCantidadArticulo.resx
@@ -123,31 +123,32 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="btnIntro.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAOBJREFUSEvt
-        lTsKwkAUReMGXIWFmxKXYWspaOGnEAs/uA1LO3dgY2UhWIiIguDv3AxiDJmYZCznwIHJhDeXTJI3gScv
-        ZZzgHp85Vc0YtYaVOZ6xjY2cdvCCU7RyxK4ZFqKHBzNMRo/aNMNCqFZrWPEBPuCLGj7wikNNwF8DKqgf
-        bIF3TYBTQAn1h6/Dqw/RRZ0CBqj7K2xFXOINhVPAFnU/rt7DCIVTQBV3uAmvkvkZoGanhmVDIXUzTKSP
-        qc1O7VqfnR45us9ZVI1qU9u1DosZnvC9x1lVjQ6r1APHEyMIXrTYdJ5m+VD9AAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAN5JREFUSEvt
+        lTsKQjEQRY8bcBUWbkpchq2loIWfQiz84DYs7dyBjZWFYCEiCoI/LkwRo+89QyxzYJo7mbkk72UCiUDK
+        wATYA8/AUM3YemQyB85AG2gERge4AFO/qcsR6PpiAD3g4Isu2mrTFwNQrXpkkgySwRs14AFcgaFpfzWo
+        2AVbAHfTogxKdsPXnu42jTIYWH4FtJxYAjdbE2Wwtbwf+g4jWxNlUAV2wMZPOBQaaNhpYGUhk7ovOvSL
+        hp3GtX47bdk9519CNarNHdd6LGbA6ctZF4Vq9FjlPjiJD1602HSeFyOM9wAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="btnEliminar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAASdJREFUSEvt
-        lLlKBEEUAMcL9B81UhMxFAw08AQPdM09EDTzAxQEYxMjDdTIWD/AwLNqewfa3eneXfAKtqDg9aNfv5me
-        ni56/Hv6cBKv8Rk/Mr7gHU6jdW3px320+AIXcDbjHJ6j86cwyyAeo5PnTXSBTW5DWM0QnuA7zpjokkV8
-        C2ErI3iGThg3EXGP6yH8wga69yVupW/ewjCeootPmGhiBy3cqo8CxuZq9VEg2cDJrzhWH1Wzghbv4l4j
-        NheTbPCEByHMsoouULW4JBs84mEIk3h0yydX38RcTLLBNua2KP4vlnC5EdswbvJ3H1kG8Aid0PyD3WDq
-        mHqVlGQbyHf8aNZm+dGroiT+qJe4iWtt7PiyK/HaHcUr9IRZnPMBO76ue/wGRfEJ9fZvmTJLRiAAAAAA
-        SUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAASVJREFUSEvt
+        lLtKQ0EQhr9oBH1HrYyNWAYstPAKRtGk94KgnQ+gIFinSaWFprLWB7Dwyg+zMEzcPRGMWOSDgeWfmZ2z
+        e2YHxvx3asACcAu8AJ8FewUegCXLq2QCOLbkG2ANWC7YCnBt8Ytxs0gdOLfg1eisQEXuo+iZAi6AD6AZ
+        nUOwDrxHMTEDXFnAfPD1gVbQxK7dfUJXqZMPMA1c2uaN6AQ6lrjvNK2ltZ2WLaDgN2AuOhxblnwIHNla
+        midb4Bk4ieI3bLvWjJuLbIEn4DSKAbVu+vJ0EmmebIGDiivy72ID2LS1Cvoi2QIj/8liEjizgPjA7gpt
+        qlGSKBYQv/HQlFtkpKMi4X9qF9gDdips6GGX0NidBXrWYak9c/b4k3E95m/4AvX2b5mxubBGAAAAAElF
+        TkSuQmCC
 </value>
   </data>
   <data name="btnEscape.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAOBJREFUSEvt
-        1b8KQWEYx/FzBcR9WBnciGTnDqzKohgwKIM/KUZltyk3YbMJSaIs+P46Bsk5eo7F8P7qU+8ZnvN0njrP
-        67lYE0MfW9yNVNOD3hGYEc6oo2zUwAUDBOaIpn+MlBYO/vFz9KkV/xgpqtU7AuMauAZf818NNtBzDh3o
-        D58gjgXWyOA1pgY3VJHACloBBRQxQxYpvMbcQDsmiTxq2KOEKdL4qcEOetaI5s/zGBrREhqheURadlpY
-        UdNG6LLTur6iC43EQjWqDV3XuiyGOEGfaqEaXVahF47LWzzvAfpcc4nTpGcVAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAORJREFUSEvt
+        1T1KBEEQxfHfCRS9h6kGXmQRc72BqWAiaKAGgoEfCG4omJsJXsLMTFQWEQUTlYIKhpbdpTQxmD8UTBe8
+        fnTBvKKnyAxO8IivYoXmOO8YyznesIONYu3iHaftpV1esNc2C+xj1Da7xFM322aB0MYdY+kNeoOp/C+D
+        hzwPcJh/+BCzuME9lhp9yeATW5jDXUbAKtZwhWUsNPqyQWTMPFawjWes4xKLfzV46ozoOr8vckS3OcLy
+        iCLsIrB+y8G0sIu4/sBRjqRSoQntxLiOZXGG13xqpUITy2riwun5wTf6XHOJVMnUSQAAAABJRU5ErkJg
+        gg==
 </value>
   </data>
 </root>
