Avances en la gestion de mensajería y ordenes de entrega

--- a/aDVanceERP.Modulos.CompraVenta/MVP/Vistas/Mensajeria/VistaRegistroMensajeria.resx
+++ b/aDVanceERP.Modulos.CompraVenta/MVP/Vistas/Mensajeria/VistaRegistroMensajeria.resx
@@ -180,4 +180,15 @@
         TV3oT6Nf079GIPAJ7D/1NN3aiT4AAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="fieldObservaciones.IconLeft" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAVVJREFUOE/V
+        lDEvREEQx7fSCRq5b+ADqEQoRKNQ+gQ6hVajQBTiKwkSp7qdvZfdfcvunkOloBGFRO6EmZeRd8e6bKju
+        l/xzb97M/Hf35WbFeBFNezmUsB9LOMoR1Qatlrh9GEoEC71g4DRYdZInOKMeX8pFtqnBFXdxxQsOs0HD
+        JvVyWBOs3IsWzjkUXsu5a6PmU6IclwnqoV4OawYNb7SexZXfUR+/qE81VJtlSHQBpowxMylRjsvyDTum
+        vRCNXB2Ud2rF+8tJLqnIMnSu1cBjvX47ZiVv5WbVwGTvMJd/G9L3C0aueQMbJNz11Z8N74piGg3uUU+o
+        LuoB+3rewjaX1OQYdkq1jiYvzrkJfn7zVh1yepgcQz7i45cZTsgBp35SjR6OEYdJyDBa9UxmdDHw6zR8
+        OdB0FLhTSAlzt/jbx7/OMbeNhq4v3MXOKAXd2uLysUSITxb54jks48TSAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
