--- a/aDVanceERP.Modulos.Contactos/MVP/Vistas/Cliente/VistaRegistroCliente.resx
+++ b/aDVanceERP.Modulos.Contactos/MVP/Vistas/Cliente/VistaRegistroCliente.resx
@@ -123,57 +123,80 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="fieldIcono.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAYdJREFUOE+9
-        lLFrU1EUxl/WVqRba5a+3O+cc89NQhCKbTctiqV/gCAZBJdSuxe6OfgvlKJTHcUObcdi6eD/USjuDgo6
-        mEDkvISQHEjyOjQ/+ODyfd+58Lj33SybN0T0sM68YbK1z+9EItpXxl9l/BvoT6TwzvdKoRzaxWaC3bVq
-        dcEUOeyZlwSvfX8mkfEjMg68rxQOlXDr/amktPpIGb0Ya9FnIrla1qzVln02kUaj8UAZXZHaus8S0aYy
-        Oq1Wa9FnU4mM70nwNcuyyohdUQ6nKrge8crBzEkZv5XxrX9AoR0ZV8r4ZZ/t+6UgIijjQpl+mpLgXESC
-        780XkfAkEr0qI+v6+TEih7d2usq4KaluErzx+wyJhC/K+Oj9SSjjk814f0hiOo6EM+9PojgwCkfeH6JE
-        L+0RSBJe+MyjRNt2wesSnvtsjMT4YEVlnNjQ6C/WyPMVEewo43PRofB+fHoCEdjqX+jigHqDJ8xk645y
-        uFSip35uJo/zfCkBTSV6ZrK1eb53r/wH2jNzjO6hkEwAAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="fieldNumero.IconLeft" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAbFJREFUOE+9
-        1D1rFUEUBuAoKPoD0vrxI1SsI1goIoiVNjYWFga0EWxsbMUmFhYW2gg2WliLhRe8886GO+9sMudcYwIB
-        QZDEr0IQsjIXLpydFXarvHCah9mzH7NnFhb2O9NQnW2a5qA1AIckjk9ZG5Q0+XhSiGajxjHrSn9RiJ/W
-        BiUFXBXie9M0B6wL3YNEN7I2KEL3UOjedzzitRJPSu+NEG+VePwf39Lgb5beyrSqFjW6K/k156X0O0Ks
-        WEthfCN/Vwm4NzcJuLw9Gh1tNUz014XYMLWVL9SIbesp4otGvyfE59b62p1uNSyzHv15If7UdX3YugTc
-        kYBobVDyK0lA1XH650L3ovTeCN3LRPesdCUoxN3SeyNEUuK2tc3Nd0eE+CuTasl6J1rjjBBfldjJJcSu
-        0DV5GuY2q4gfs40ids3abyn4a62Gecs1uHPzSpPxshB709pdsi7RP5rd2Fiu/Mu1GpaRiFtCfOo4saLB
-        vym9NxLwVANedZz+Q57j0nsjdE7p7lvLR5gQv/NUWB8UIX4pccHa2lp1PG/I+urqCeuDkscoH6LW8hPm
-        w9bavuQfqHuLbE5lLbEAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAYlJREFUOE/F
+        lD1LA0EQhpNWRezUNN7tzu7e5kIQxI9ORVH8AYKkEGxE7QU7C/+CiFZaihYmpSgW/g9B7C0UtEgC8Z3L
+        EIREc7GID7ywM/POft1Hpu8Q0XDemFkWjyX9NzzRXmT0J1QVfThSu1LujcioUjKZ1dtTudwAyxm1wzlv
+        9YbY0uOMfoH2JWwRkTqISD9LmA7vJ8axk4ZzoZNUC2uDiGuFMByVVHfiOB5CU93acEZSLXCvc6jVisXi
+        oKTSgeM+4q6uMMw2MwlZ3O017vVB4vQYYzx28g7dNR+QKmGRe8RvfGyx9QbeO40JKpGhVxZ2XLbWKin/
+        E9jAtCNaTyP2Sltn8OJu4Yh16Cml6riGTWlvx5G+hOlUwq7Ae8Y9ErbjDZ3AcCNhVzBhBV/OsYTtREQr
+        MFW9VcuS+hF4V+Gt5a1aklRnvNFHbITOuen7JxYHwZi1eg21i8RD6lBKv+O0XkQDXujkATUg/oWxeIzF
+        1C0Wmxd7eiaDYMRrXUDzAovHnJNyP8hkvgDaM3OMhuKHeAAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="btnCerrar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAJ1JREFUOE/l
-        lEEKwjAQRR+0RW9Wz1Vd9Bq6tWs9nvJhBoYhpka761uFzs8jmaGB3XMCZmDIhQLKKDvmQuQCvID7ilS1
-        xbLnXIx0wM2CD+CYA/btaZmr7alSkzbLnJL0Z5kT+6SexnWfw98SpX/LRLxmqadNbHplnUKnkUDD0QDy
-        oA550ydKMqdZWpM5TdLNfz09DtOKzFFG2erjsAPe6CA46xMjhLcAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAKBJREFUOE/t
+        lEEKgzAQRQNV2pvpuWwXvUbd6lqPp/8JA0HMYKwr8cEDE8dPksGEm1p+ZbmMfKihtlpGCT5ykp30QnnX
+        S2rfTKR4yFZSOMiXXMPcKKn5Sb5x8UKzw4yt0MNhRnxOnGn8XMhDxKF/h0G8TUw1ahenbplVsBoCaA4N
+        WDfqKXexFWZkh3phRlbo6b8el0MjvTCDGmrdy+HyhDAD6CA464NzjSkAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="fieldRazonSocial.IconLeft" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAUNJREFUOE/t
-        lLFKBDEQhg8b0d5asPIhbIRrLMRCrhAsxUZR0EKx8TmuFx/CUmFB8mfBmdyyk2AlKIhWIlgIKzku52Zv
-        WVkOrfxgIMxMfjJhZjqdv8Sl6YI1ajMn9LxZUt1qTity1tvCuBej34TxJIyBc262mtcaIRgxeq/qbyTL
-        0kXLuBBGNnxVMFJrQVAIl+VYzioRwlFRFDOR2EOSzAnDCeNKSO1b0rvfppaCoDN6vRwT1mfCeBXCaSSY
-        G6wK4+MRmI8CI5pKzhmH/m9jJ6EnjOfIWaJRsO5urbPEv2BE7d1aZ4n2glO0jWUcTLTNuLENrn2T5oST
-        YEJYDoLWqK0oxvrcN7Y/R4KeMHqWgchIdcejZ1S/HBPGjTCOJ0bvJ5pKbsVofb1YVp+W8e4XwlTra7hg
-        fcl3tzuO1IYMsFLN+XW+AOuHr0ZSIaRYAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAUFJREFUOE/t
+        VLFKBDEQXWxEe2vByo+wEWwsxEIsBEuxURS08LDxO+zFj7BUWJBMFkyyS7LhKkFBvEoEC2F9ezvxdlk5
+        9Q4OCx88ksnLvE3YzEQThU+SudyIDatos2SuxApLo8Fque00dZ2RLxgfwdR7P83y6HCKDEz3OPwZsiyZ
+        zzVd4BRZ/1SBSqwGQ4yXdc1qEWPtqCiKKbapcB/HM9jgwSsY7OdK7g4oFoKhN3KtrjktT5HTg95hqwrW
+        0DKEtweiWV5qIBhy2IDVdIjclMMK5R/E4hOHLQw1/Cr337CFP2A4xrNBMRwgt/lsPh+2oWskd/DVk0DE
+        i8EQjWKroWl5hrxeOWerAULpgdQgOkwwdEac1zWY3YDHrdL7DsOu/Ctw+3rOtXjHiV4x747VvvoNtrzy
+        3e2OV2LdpbTE0qQQRR/rh69Gj596ogAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="fieldTituloNombreContacto.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="fieldNumero.IconLeft" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAUNJREFUOE/t
-        lLFKBDEQhg8b0d5asPIhbIRrLMRCrhAsxUZR0EKx8TmuFx/CUmFB8mfBmdyyk2AlKIhWIlgIKzku52Zv
-        WVkOrfxgIMxMfjJhZjqdv8Sl6YI1ajMn9LxZUt1qTity1tvCuBej34TxJIyBc262mtcaIRgxeq/qbyTL
-        0kXLuBBGNnxVMFJrQVAIl+VYzioRwlFRFDOR2EOSzAnDCeNKSO1b0rvfppaCoDN6vRwT1mfCeBXCaSSY
-        G6wK4+MRmI8CI5pKzhmH/m9jJ6EnjOfIWaJRsO5urbPEv2BE7d1aZ4n2glO0jWUcTLTNuLENrn2T5oST
-        YEJYDoLWqK0oxvrcN7Y/R4KeMHqWgchIdcejZ1S/HBPGjTCOJ0bvJ5pKbsVofb1YVp+W8e4XwlTra7hg
-        fcl3tzuO1IYMsFLN+XW+AOuHr0ZSIaRYAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAcVJREFUOE+9
+        lL1LAzEYxqug6B/g6scfoeKs4KBIQZx0cXFwUNBFcHFxFRcdHBx0EVx0cBYHC/ZyJ73kapL6USgIgrRa
+        HQSh55P0veOGDpn8wUvzPORJ30vukvt3KmEwEcdxN0kLY6xHieIoSXdk6W5EcRY/RWyQLIvm/iz8Jkl3
+        ZMgWEPxAh11kWRT3diT3CiTdQXAXdUMyRQl2oTk7JOkOurtCcJ9kCvyqDv0Vkp2pBMGAFt68ecyksFd1
+        hA+yngyLy/BiFbKtxMM4XysU+mmpNpL7S5j4lKmqCWrBallfCvaqhd/C+Dnrq8gbo6U68yD8aUz8iaKo
+        lywLutlACZLumEdCBSRTFPdPcFCnJN1B6AyvxjHJFBwSR+ebJN1BSCK8RtLy8nLdB/9XlYJJsjqjIzaO
+        iW9YoG4K4wY6jPHbTDxbgn3CizFuJB70uwz9RVqqjTlyHXpTSclScR0TW5XIm8v6Svh78N+yninzytFS
+        ncGXsIrgI8kUeAd4oS9JuoPTPdIhOyeZghO+xVbskHQHIU9zb5ukxVxh6PAbf5Ynyx0Ev7DhMyQt5XIw
+        BD9+uL8fJssd8xmZS5SkxXRoLluS/0Uu9weoe4tsAKohoAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="fieldTelefonoMovil.IconLeft" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAANNJREFUOE/t
+        lDEKwkAQRdMoHkBPoVcQGw8giKcQr+KFLCxEi+wkkN1szCZFbqAgwVZnZISgmRAQrPLgFzvz53f7vb9g
+        re3n2p9lBjZnrbZV0Yx25GF7M0WxH6RGnZyBEnVDPT5EsxKDgbx8JpNqWKH54hwMk0hNnAl2VeXWH+dh
+        OMLQaxarJZ/JuDhYOw0xP0XIQ15+ynSBIl2gTBco0jqQPjx9fCoHHn3xLgcMXfBIhnoOW+WIB3dqnTrR
+        DnUAgB6fNfMKjYJpptW8TrRrXbC/4XlPxMVOg2De0+UAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="fieldTelefonoFijo.IconLeft" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAWxJREFUOE/V
+        UztLxEAQjoqigmgnIoKojZ2V4F+wsLGxEaz8GYd2VwsW/gTTWVkopNFDbieXM5vNZXPnRRC01uNa44xM
+        LoELPrbSD4Z5f8w+xvo/SG17LFJiJw6g+jsRu9TLNDkooSX0tHSvMokk9FHfF2PDAm/UyzQ5tBRHsQSH
+        3U9g8YsOxB67paAe6mU3x1eEsXTX0T5F+2wgPlSoxoxQ1TfQPsc7szNB/4RqjAjZLYURoVJqIgxhgV5T
+        N5uLaZqOdGR9iWqMCLUvtmPfvdBKbOLL3rYlrGKuRTVGhDjRaBTdzFDsAWC2qI0I6cPjlJdtv7GFf9Pt
+        KHcNc49UY0RINgBMl+m/MaHRHeIrHjDBYBuwuI/6uhgbEuqRYp9pcjzValO0TrwFKWon2wo85qsOoJH5
+        RcH4cZI4k0xTDiTs4cSHsS9W+L6eS6f4KWhSJHmnSVnCxPPmOG2GrrybpwlbnreMX2Scw9/Asj4A7jFF
+        dkkJQRUAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="fieldDireccion.IconLeft" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAdJJREFUOE/V
+        VE1rFEEQbZPc9OQtEi/xEjE5qKgQIvgTJIgKmlvw85aLB/0B/gY9CIGwsqDiQdRV2Jus29ULMz29Mz2j
+        fyFL4gfCKuOrSbFriDgzN/OgoN7rqkdX9eyq/Q3vaMlb/dRb+rwTphGH5rQc14MPaQ0mP2H4zEe0WoSl
+        54ihj8xdKauG2OoL3Jg4fUmkERJrLhemgTkvUjlSS29woydClXMfDnMIVRh9HaavhJYDxVsY+SLnSdI7
+        Av4Fsd3v0zRrqTXL4APOK4ENuYnzzNIxcOyShmmoZ1njVdQyTEPzMoloQ6jqB3o+c90TQnnkBgxfCC1H
+        bLuLaPiVOX1SpBGygE7xmY+6Z0SqhsTSW36cPM8PiKQ4h1nLh/q1SNWBHR5H83cY3xJJ4eXvgH/Dg82J
+        9G+02+0p7O9GGtFD7/RZNoPpD95hHNIC53iYm6mjc1zDtXmzOSnte4GiB2gaYOnvcItHGHHCR/o98g70
+        j4hWoVl6XNSgNrX6vrTvhnPuEHa2iVvdFqnAJ9s9CsMeRxZ0ZkQuwCvgHu4VaQz8pK7zYRAEB0UqxegS
+        obkm0hj4E1jBCF9RQHWCe/5qWHwSkb6ahHSvTmCXV/78tP53KPUbGLKsfnIZao8AAAAASUVORK5CYII=
 </value>
   </data>
 </root>
