--- a/aDVanceERP.Desktop/MVP/Vistas/Principal/VistaPrincipal.resx
+++ b/aDVanceERP.Desktop/MVP/Vistas/Principal/VistaPrincipal.resx
@@ -126,39 +126,40 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="resource.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAWhJREFUOE/V
-        lL1LA0EQxdP7AZY2keyb2Z29w0P8ABsloCB2gmipndhoo7X+J2IlWIqNtZb+BwGDjY3aiIVEBWWO5DQj
-        F7QR8oOFuffeDsvd7FUq/00KUOLdQvRuMcaxUev/Gu/dTGBcCuNDGM/CeNI6Mq4i87zN9yQQrQmjJUxH
-        esKOnhIlwjgWxntgt929q4QQapkwXoSxY70O4rGlTSPRrPV+IIwzYTq3ukUYJ8K4sHoXRDQsjFf9ANaz
-        JL42p6ccr1ZHrFcgwJS+eG1sPUuapoOaDcFNW69AiOoasnoZ+QQQ1a1e0AcNGfvCuLN6GZoVjz2r54QQ
-        hoTx2Gv+LIGxq3t0r/V0WDeFcZ9l2YD1ytCsMB6ix4b1KsJutX1Dbr6WawrhtnjOa9fszqAVPVZsvxzv
-        sZxfq/aKhFNh1yg0RiOo9i0jREu2TymRaFIYb0LuQMgdap0yT9jcnwhE60K41qV/Iev3H5/47G8/eHic
-        nwAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAWxJREFUOE/V
+        lDtLA1EQhbf3AZY2kdyZ+8riIj7ARhEUxE4QLbUTG2201n8iVoKl2Fhr6T8IKDY2aiMWEhXimTAY47qu
+        Wgj54MCdc89Mbti9m/w7KRHXnJmNzszFODSo9u9xzkx4S2fBUhN6hB5kHS2dR2unNfYzPPMymhvB8r6c
+        UO0kZa7BP4BevTUban+P99UMDU/Qplo5gqN1GRqZJ9UqBsFjnOxEy0KQO4ROtfwaZu5H6FkegFqF1Fx1
+        Sk45XKkMqJUnEI0h1JTBahWSpmmvZL0342rlCcwzEtKyFMlKj5Z5umCgpR3oRstSJItXaFvLTrz3fQjc
+        Q4Xv32dwk7akR3rVaoNfWsPmbZZlPWqVIln03EVHq2q1CdYsYVNuyGVb5iowXb/XrTW8jgw1MHBRx3Ti
+        HC20rpUqMh1hQP3ds1T34n3I4KHMa3s5uKujGPIS2OxCe7JOrR3R7b+BL88K/uqFSL5CanctSfIG+Oxv
+        P0SDfwwAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="resource.Image1" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAblJREFUOE/V
-        k0+ITVEcx88Qoqwm1Js3i3u+39+f4w1T3sZsxlahlCyUpZQNO1bKjoWVlCYWlhNbsbCwlWZBsbBgYyMU
-        kURE593xvHtmvPdY8a1v93R/v9/n/M69vxPCfydVnVLVOMxmVnW73XVlbUMucb8LXrrg+5j+7MTFEMJE
-        yQokt7jggyvPd8jtZUelScLIwy54Z+TRkheSxH3O+NF9arKMDdGaJLjrguuq1WwIYW0/0ttN8cUEb5Pg
-        dLvd3tgoLWTAXhc8ysc2xW1XnjPByV8Jdfuv6md87oLXifEMyQ2DICf3uMT7LvhkygtGXE2KGxnoijsr
-        gHnd6XTWm8RT+fs48TTHzKqdXh/vmwsWZoDpeoN4uQ8U3FsV2H9n1jKN11zwdRn0IInMD+b8EfCn3OMO
-        Jw+sNh5/BRym3wJd4iEXvGlkj6EkuGLE4gpgHube9JNzjYohMrPNLniSBGdzpy641UhwwaX6B/TG5tkY
-        fu+CxzNVtS1PQ+6yAcxK5K6kPOaK4yOd7777pEu8mecWwNaS15MxnnDF0kgLHy53+SKRu0vOoCaS4mC+
-        KaPsEo90W61NJeDf1g9SD7pLhgCifAAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAcpJREFUOE/V
+        Uz1IW1EUTpQqCk5BCzEdcs+5P8+kCs2ii66FVhDEodBRCi666SS42aFTKZRSB0exq+jg4FrEQaEODu3i
+        IqbQoJRSUdLvvndiIonJs1s++Lj3np/vnXPveYn2gzFmEFTNaK3NFgqFR5LSGE6rl07TGViOyb+O6R1S
+        k5FCDZi5HwGXzvBqjnmoUVW1RDxZ5hnklLC+FpkqAq1eOFa/nRtMiSkOOgJNuxBdNyY7gnNnZAbCrxm6
+        spp+IWgxk8n0iKshLNFzCB35tq2hbXS2gtx5cYugpvNoVT+wLwasltBat4SEcMwT8H+F/481/NYyfQ4M
+        bXpBFLQjYVVBv8/lcl1WqwWcS7j0E+/Dow7j7Nu7AT/liZ74WFzTh1tBTXveFqJWsAKMRtoatQb7tQjt
+        B1qPizvEgwQrcE49RauT2NaNx38JNsO9grjoaRh+yjE2MBEf8TAbdYJ+mGEoo7UxMbUE7rgPOccQXfaV
+        Yr8lrggwvAfxAOHYfI/BC/BbPpt97KfBVylSVQTMzwLDs5ipNy3p/33nUli/QLhIRAMicxeW1RwSDlpS
+        86FUeYpCRiW9IZJ4uSn/p7QiqntVSKd7Ja8tkEj8A1IPuksNmOHfAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="fieldIcono.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAY9JREFUWEft
-        lT1Ow0AQhVNTcIBIeHff5hhwCqAAiR4kKhq4AB0Fh+CnAmV3ERLiAhR0XAAQ0KQIDRQUgNYKaP3GlmLs
-        VPhJXzHRzHvjcZT0ep06lSgAmQfOPDDywFdDRg44d9YOOKdUMdwBryVGjYieQ2sXOE8oANfJ4MOEqjoy
-        9sbcBuCmDOq/4jwhD7xPmu+DUusRDzyW1LlpUGrHa71WBfW/cZ5Qsm0aGJ+C6zoL/PZznhCdl0/OdWQc
-        gLsquJ/zhMi8dThPiAfahvOE+B22DecJ8UDbcJ4QD9Rk12l9GAnWHjitN7mH84R4YFqC1nse+Cy8c2uf
-        uI/zhHiggDEbVXV8av7C5bS1QABOQ/yP+PkMOEnrmS4QjPEFQ65nuUAAjlPDeIm0dsZs5wsYcyTC21jA
-        AR/CtA5NFxCGdekWqLuAy7LVdMABL8J0Wqx9Tr1Clq1wntCFMUuFBbTeGhqz/xf4pzhk2SLnCV0OBvNe
-        qWU+XWOUWg79/hznlSo2xm3jyYRRTaJH7jVteKd/p2+B7piJNfdeNwAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAbhJREFUWEft
+        lT1Ow0AQhVNTcIBI2N7dHANOARQg0YNERQMXoKPgEPxUoNiLkBAXoKDjAoCAJkVooKAAZqJxNB7NRDZx
+        KvKkT8lE895b2wl05ppLU/Q+Kby/AAbAz5QMcu8v8xB6FD9ZWA6GdyVoKjCzH8IS1diCA9wy4xNhzciw
+        cO4efHcaYv+GamzB0ictP8Y03UTg/bMyj0Jh3iuybMNC7H9Qja0yGOCFeBVybnKA8T7V2CoXCTTyWyhn
+        ZAi3+sFC7lONLb48C6jGlmZqE6qxpT3HNqEaW5qpTajGlmZqwH6eZcdIDOEIXrflDtXYkoa6xCw7gGf8
+        XXnmIbzIPaqxJQ0VnNuyZrzqSnkJ3weoxpY0lMBv+hx4H3/m/RmfZ3qA6FxRCZQzMLMDwFWe8kC8E3zO
+        ndvFPXg94Z+PEXlUY0sa4N/olxpcF5FHNbakQQ1tgsijGlvSoIY2QeRRjS1pUEObIPKoxlaeJOvcAN+B
+        NzW4DiG88qyYJGtUY+vKuRVugp/XTt+5w78g/xTDAZapxtZ1r7dYpOkqN7YCZMZud4FqJgsX8bR4y9Sw
+        BmDGKKtu+Vz/TJ3OL4HumIlQQQxfAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="fieldTitulo.Text" xml:space="preserve">
@@ -192,21 +193,21 @@
 &lt;/head&gt;
 &lt;body&gt;
     &lt;div class="logo"&gt;
-        &lt;span class="advance"&gt;a&lt;/span&gt;&lt;span class="dv"&gt;DV&lt;/span&gt;&lt;span class="advance"&gt;ance&lt;/span&gt; &lt;span class="erp"&gt;ERP&lt;/span&gt; &lt;/span
+        &lt;span class="advance"&gt;a&lt;/span&gt;&lt;span class="dv"&gt;DV&lt;/span&gt;&lt;span class="advance"&gt;ance&lt;/span&gt; &lt;span class="erp"&gt;ERP&lt;/span&gt; &lt;/span&gt;
     &lt;/div&gt;
 &lt;/body&gt;
 &lt;/html&gt;</value>
   </data>
   <data name="btnSubMenuUsuario.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAXtJREFUOE+9
-        lDtLXFEUha9t1LQSG52z9jMTphHULgQsRCuLkOgPEE0blPwTsdVGFCQpTJNg4f8IRHsFBVOokLDHB7px
-        5o4E/GDDZq11Dufe86iq54aIXr5mnoiKPvtPwok+GeOPMS5u6lypLOdcTxiXhfZkgsWx4eEXUcplKTQX
-        fMz5WpRxpIyVrBuVL0b4nfWuuI+8MsZf1YZmT2TUwnvTaAxlryPNZnPAGFcijfHsOdGkMS5brVZ/9rqi
-        jAMXbFdV1XdP7jMuOybYv6f1BjO7Mc6M8eN6g8qCMn4a4zQ+O+d7gohgjG/GdBzlgq8iUnLueYlVuWBO
-        id53q8jUrtalzNzciENj/KqpyFwoMJ3nucOlbKpgI+udqM0bY90Yu1nvRGySM9ayfocC7+LQuuBD9jLG
-        ZT6yRvQ2ew9wxmrcEiVsxT9V1cFbL3rnMhsHPjIm+PxwdAfi7XPC9/agWIXgpF3RMy6VsffYtawlHtQY
-        6FKmoqL/70f2qfwDRi1zTs1XFnEAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAYFJREFUOE/F
+        lD0vREEUhu+2vlqxDXfmzJeVbSToRKIQKoVgf4CgFeKfiJZGViIUNEThf0jQk5BQ7G7Ce+6ebLNr5y4J
+        T/Imcz5m5sy5cyf5c4hoaNyYaRaPxf0zAtG2N/oDqoneHaktCfeGN6qSLWb1xmSx2MdyRm2yL1i9Jmn5
+        cUY/QbtitvCk9j3pBzHzEcLoCCr5dC514mph7Zjn2ESaDosrTqlUGsCkhrXplLhaoK8ziNXL5XK/uPKB
+        496hV1UMC01PRgG9PUVfb8XOjzEmoJI36Lr5gVQFm9zAfuVjS1pv4N5pLHDhDT2zUPG5tVZJ+J/gqlDJ
+        siNa6SbOiVYbrFrEEfmPeITuI+KcmtN6Qaa3gwWPndVHYkaJ5mPHQ+hMzCj8kYLRB2K2g/LnsGAdiavi
+        +hZco3XO9USz4uoMdtxDYsORPuGeOucGJZTwOBi1hA2rnIMLviOh7vDbF0hfZZO4CqtfMvEYwgW/7PRb
+        RuEHlSei0nkWj3/9yPZGknwBRi1zTjHmGzoAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
